# ic

./: Cargo.toml  WORKSPACE.bazel
.devcontainer/: devcontainer.json
.github/workflows/: ci-main.yml  ci-pr-only.yml  release-testing.yml  schedule-daily.yml  schedule-hourly.yml  schedule-weekly.yml  system-tests-k8s.yml
.github/workflows-source/: ci-main.yml  ci-pr-only.yml  release-testing.yml  schedule-daily.yml  schedule-hourly.yml
bazel/: external_crates.bzl  focal.lock.json  focal.yaml
bazel/conf/: .bazelrc.build
ci/src/dependencies/data_source/: jira_finding_data_source.py  slack_findings_failover_data_store.py
ci/src/dependencies/job/: bazel_trivy_container_ic_scanner_periodic_job.py
gitlab-ci/container/: TAG_GH
gitlab-ci/src/dependencies/data_source/: jira_finding_data_source.py  slack_findings_failover_data_store.py
gitlab-ci/src/dependencies/job/: bazel_rust_ic_scanner_periodic_job.py  bazel_trivy_container_ic_scanner_periodic_job.py  npm_scanner_periodic_job.py
gitlab-ci/src/dependencies/scanner/: dependency_scanner.py
gitlab-ci/src/dependencies/scanner/manager/: bazel_trivy_dependency_manager.py
ic-os/components/hostos-scripts/: build-bootstrap-config-image.sh
ic-os/components/setupos-scripts/: setup-hostos-config.sh
ic-os/dev-tools/bare_metal_deployment/: deploy.py
ic-os/docs/: Configuration.adoc  Network-Configuration.adoc
rs/artifact_pool/src/: consensus_pool.rs  lib.rs  lmdb_pool.rs
rs/consensus/src/: consensus.rs
rs/consensus/src/certification/: verifier.rs
rs/consensus/src/consensus/: batch_delivery.rs  block_maker.rs  catchup_package_maker.rs  finalizer.rs  random_beacon_maker.rs  share_aggregator.rs
rs/consensus/utils/src/: lib.rs  membership.rs  pool_reader.rs
rs/crypto/test_utils/canister_threshold_sigs/: BUILD.bazel
rs/crypto/test_utils/ni-dkg/src/initial_config/: mod.rs
rs/execution_environment/src/hypervisor/: tests.rs
rs/http_endpoints/metrics/src/: lib.rs
rs/http_endpoints/public/: Cargo.toml
rs/http_endpoints/public/src/: call.rs  common.rs  lib.rs
rs/http_endpoints/public/src/call/: call_v3.rs  call_v4.rs
rs/http_endpoints/public/tests/common/: mod.rs
rs/ic_os/config/src/: config_ini.rs  firewall_json.rs  lib.rs  main.rs  types.rs
rs/ic_os/config/src/types/: firewall.rs
rs/ic_os/dev_test_tools/setupos-inject-configuration/src/: main.rs
rs/ic_os/os_tools/hostos_tool/src/: main.rs
rs/messaging/: BUILD.bazel  Cargo.toml
rs/messaging/src/: message_routing.rs  state_machine.rs
rs/nervous_system/agent/: BUILD.bazel  Cargo.toml
rs/nervous_system/agent/src/nns/: sns_wasm.rs
rs/nervous_system/agent/src/sns/: governance.rs  mod.rs  root.rs
rs/nervous_system/integration_tests/src/: pocket_ic_helpers.rs
rs/nervous_system/integration_tests/tests/: sns_lifecycle.rs
rs/nns/constants/src/: lib.rs
rs/nns/governance/api/src/: lib.rs  proposal_validation.rs
rs/nns/governance/src/: governance.rs  test_utils.rs
rs/nns/governance/src/governance/tests/: mod.rs
rs/nns/governance/src/proposals/: create_service_nervous_system.rs
rs/nns/governance/tests/: governance.rs
rs/nns/sns-wasm/src/: lib.rs  types.rs
rs/p2p/peer_manager/src/: lib.rs
rs/p2p/quic_transport/src/: connection_manager.rs
rs/p2p/state_sync_manager/src/routes/: advert.rs  chunk.rs
rs/prep/src/: node.rs  subnet_configuration.rs
rs/protobuf/def/state/queues/v1/: queues.proto
rs/registry/admin/src/: main.rs
rs/registry/canister/: Cargo.toml
rs/replica/setup_ic_network/src/: lib.rs
rs/replica/src/: main.rs  setup_ic_stack.rs
rs/replicated_state/src/: replicated_state.rs
rs/replicated_state/src/canister_state/: queues.rs  system_state.rs
rs/replicated_state/src/canister_state/queues/: input_schedule.rs  message_pool.rs  tests.rs
rs/replicated_state/src/canister_state/system_state/: call_context_manager.rs
rs/replicated_state/tests/: replicated_state.rs
rs/rosetta-api/: BUILD.bazel  README.adoc
rs/rosetta-api/icrc1/rosetta/: BUILD.bazel
rs/sns/cli/: BUILD.bazel  Cargo.toml
rs/sns/cli/src/: lib.rs  lint.rs  main.rs
rs/sns/cli/src/init_config_file/: friendly.rs
rs/sns/governance/canister/: canister.rs
rs/sns/governance/proto/ic_sns_governance/pb/v1/: governance.proto
rs/sns/init/src/: create_service_nervous_system.rs  lib.rs
rs/sns/root/src/: lib.rs  request_impls.rs
rs/state_manager/src/: checkpoint.rs  lib.rs  state_sync.rs  tip.rs
rs/state_manager/src/state_sync/: chunkable.rs
rs/state_manager/tests/: state_manager.rs
rs/test_utilities/execution_environment/src/: lib.rs
rs/tests/: BUILD.bazel  README_NEW.md  system_tests.bzl
rs/tests/consensus/orchestrator/: BUILD.bazel
rs/tests/driver/src/driver/: ic.rs
rs/tests/httpbin-rs/: BUILD.bazel
rs/tests/message_routing/: queues_compatibility_test.rs
rs/tests/networking/canister_http/: BUILD.bazel  canister_http.rs
rs/tests/src/btc_integration/: btc_activate.sh
rs/tests/src/custom_domains_integration/: activate.sh
rs/tests/src/jaeger/: jaeger_activate.sh
rs/tests/src/message_routing/: rejoin_test.rs  rejoin_test_large_state.rs
rs/tests/src/orchestrator/: orchestrator_universal_vm_activation.sh  upgrade_downgrade.rs
rs/tests/src/rosetta_tests/: setup.rs
rs/tests/testing_verification/: colocate_test.rs
rs/types/types/src/: consensus.rs
rs/types/types/src/consensus/: dkg.rs
rs/types/types/src/crypto/threshold_sig/ni_dkg/: config.rs
testnet/tools/nns-tools/: submit-mainnet-publish-sns-wasm-proposal.sh
