#load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@rules_distroless//distroless:defs.bzl", "passwd")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//rs:system-tests-pkg"])

DEPENDENCIES = [
    # Keep sorted.
    "@crate_index//:axum",
    "@crate_index//:clap_3_2_25",
    "@crate_index//:hyper",
    "@crate_index//:hyper-util",
    "@crate_index//:rustls",
    "@crate_index//:rustls-pemfile",
    "@crate_index//:serde_json",
    "@crate_index//:tokio",
    "@crate_index//:tokio-rustls",
    "@crate_index//:tower",
]

rust_binary(
    name = "httpbin",
    srcs = ["src/main.rs"],
    target_compatible_with = ["@platforms//os:linux"],  # requires libssh that does not build on Mac OS
    visibility = [
        "//rs:system-tests-pkg",
        "//rs/pocket_ic_server:__pkg__",
    ],
    deps = DEPENDENCIES,
)

## Create a layer with a httpbin user

passwd(
    name = "passwd",
    entries = [
        dict(
            gecos = ["root"],
            gid = 0,
            home = "/root",
            shell = "/usr/bin/bash",
            uid = 0,
            username = "root",
        ),
        dict(
            gecos = ["httpbin_user"],
            gid = 1002,
            home = "/home/httpbin",
            shell = "/usr/bin/bash",
            uid = 1002,
            username = "httpbin",
        ),
    ],
)

## An intermediate image with the passwd file and empty directories.

oci_image(
    name = "httpbin_image_base",
    base = "@ubuntu_test_runtime//:ubuntu_test_runtime",
    tags = ["manual"],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
    tars = [
        ":passwd",
    ],
)

# TODO: do we really publish it?
## The final image we can publish.

#container_image(
#    name = "httpbin_image",
#    base = ":httpbin_image_base",
#    directory = "/home/httpbin",
#    entrypoint = [
#        "/home/httpbin/httpbin",
#    ],
#    files = [
#        ":httpbin",
#    ],
#    tags = ["manual"],
#    target_compatible_with = [
#        "@platforms//os:linux",
#    ],
#    user = "httpbin",
#    workdir = "/home/httpbin",
#)
